--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ body, html,.circle-container{
     align-items: center;
     justify-content: center;
     transition: all 2s;
+    background-color:black;
 }
 
 
